tests/baselines/reference/for-of29.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of29.ts(5,15): error TS2322: Type '{ [Symbol.iterator]?(): Iterator<string, string | void, unknown>; }' is not assignable to type 'Iterable<string>'.
  Property '[Symbol.iterator]' is optional in type '{ [Symbol.iterator]?(): Iterator<string, string | void, unknown>; }' but required in type 'Iterable<string>'.


==== tests/cases/conformance/es6/for-ofStatements/for-of29.ts (1 errors) ====
    var iterableWithOptionalIterator: {
        [Symbol.iterator]?(): Iterator<string>
    };
    
    for (var v of iterableWithOptionalIterator) { }
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ [Symbol.iterator]?(): Iterator<string, string | void, unknown>; }' is not assignable to type 'Iterable<string>'.
!!! error TS2322:   Property '[Symbol.iterator]' is optional in type '{ [Symbol.iterator]?(): Iterator<string, string | void, unknown>; }' but required in type 'Iterable<string>'.
    